deployment/k8s/20-dex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"dex","namespace":"quintus"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"dex"}},"template":{"metadata":{"labels":{"app":"dex"}},"spec":{"containers":[{"command":["/usr/local/bin/dex","serve","/etc/dex/config.yaml"],"image":"ghcr.io/dexidp/dex:v2.41.1","imagePullPolicy":"IfNotPresent","name":"dex","ports":[{"containerPort":5556}],"volumeMounts":[{"mountPath":"/etc/dex","name":"config"}]}],"volumes":[{ [...]
  creationTimestamp: "2026-04-17T06:18:46Z"
  generation: 10
  name: dex
  namespace: quintus
  resourceVersion: "7433"
  uid: 474d74d1-c125-41d4-90ce-36fcf1fb12e8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-17T07:06:59Z"
      labels:
        app: dex
    spec:
      containers:
      - command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/config.yaml
        image: ghcr.io/dexidp/dex:v2.41.1
        imagePullPolicy: IfNotPresent
        name: dex
        ports:
        - containerPort: 5556
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/dex
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: dex-config
        name: config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-17T06:59:26Z"
    lastUpdateTime: "2026-04-17T06:59:26Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-17T06:18:46Z"
    lastUpdateTime: "2026-04-17T07:07:01Z"
    message: ReplicaSet "dex-865c8fcd55" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 10
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
