deployment/k8s/44-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"traefik","namespace":"quintus"},"spec":{"ports":[{"name":"web","nodePort":30080,"port":80,"targetPort":80},{"name":"websecure","nodePort":30443,"port":443,"targetPort":443},{"name":"admin","port":8080,"targetPort":8080}],"selector":{"app":"traefik"},"type":"NodePort"}}
  creationTimestamp: "2026-04-17T06:18:45Z"
  name: traefik
  namespace: quintus
  resourceVersion: "573"
  uid: e7f6820c-d096-40bd-81c1-6d9cefa0e03a
spec:
  clusterIP: 10.96.202.190
  clusterIPs:
  - 10.96.202.190
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  - name: websecure
    nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: 443
  - name: admin
    nodePort: 32542
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: traefik
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
