deployment/k8s/50-oauth-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"oauth-auth","namespace":"quintus"},"spec":{"forwardAuth":{"address":"http://oauth2-proxy.quintus.svc.cluster.local:4180/oauth2/auth","authResponseHeaders":["X-Auth-Request-User","X-Auth-Request-Email","X-Auth-Request-Preferred-Username","X-Auth-Request-Access-Token","Authorization"],"trustForwardHeader":true}}}
  creationTimestamp: "2026-04-17T06:25:53Z"
  generation: 6
  name: oauth-auth
  namespace: quintus
  resourceVersion: "7436"
  uid: f434aa71-0de9-4678-8c56-fbc890d5ac63
spec:
  forwardAuth:
    address: http://oauth2-proxy.quintus.svc.cluster.local:4180/oauth2/auth
    authResponseHeaders:
    - X-Auth-Request-User
    - X-Auth-Request-Email
    - X-Auth-Request-Preferred-Username
    - X-Auth-Request-Access-Token
    - Authorization
    trustForwardHeader: true
