deployment/k8s/52-dex-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"dex","namespace":"quintus"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"PathPrefix(`/dex`)","services":[{"name":"dex","port":5556}]}]}}
  creationTimestamp: "2026-04-17T06:18:46Z"
  generation: 7
  name: dex
  namespace: quintus
  resourceVersion: "7434"
  uid: 0797ff2b-0398-4308-91f6-77d59acef79d
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/dex`)
    services:
    - name: dex
      port: 5556
