deployment/k8s/60-queryexplorer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "11"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"queryexplorer","namespace":"quintus"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"queryexplorer"}},"template":{"metadata":{"labels":{"app":"queryexplorer"}},"spec":{"containers":[{"image":"queryexplorer:dev","imagePullPolicy":"IfNotPresent","name":"queryexplorer","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2026-04-17T06:18:46Z"
  generation: 11
  name: queryexplorer
  namespace: quintus
  resourceVersion: "8903"
  uid: bad14cd8-d66d-4015-8eac-bbe29a838dd2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: queryexplorer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-17T07:27:26Z"
      labels:
        app: queryexplorer
    spec:
      containers:
      - env:
        - name: QE_PII_GROUPS
          valueFrom:
            configMapKeyRef:
              key: QE_PII_GROUPS
              name: queryexplorer-config
        - name: QE_ADHOC_GROUPS
          valueFrom:
            configMapKeyRef:
              key: QE_ADHOC_GROUPS
              name: queryexplorer-config
        - name: QE_GROUP_SEPARATOR
          valueFrom:
            configMapKeyRef:
              key: QE_GROUP_SEPARATOR
              name: queryexplorer-config
        - name: QE_HEADER_SUB
          valueFrom:
            configMapKeyRef:
              key: QE_HEADER_SUB
              name: queryexplorer-config
        - name: QE_HTTP_ADDR
          valueFrom:
            configMapKeyRef:
              key: QE_HTTP_ADDR
              name: queryexplorer-config
        - name: QE_LOGOUT_URL
          valueFrom:
            configMapKeyRef:
              key: QE_LOGOUT_URL
              name: queryexplorer-config
        - name: QE_ROLE_MAPPING
          valueFrom:
            configMapKeyRef:
              key: QE_ROLE_MAPPING
              name: queryexplorer-config
        - name: QE_HEADER_EMAIL
          valueFrom:
            configMapKeyRef:
              key: QE_HEADER_EMAIL
              name: queryexplorer-config
        - name: QE_HEADER_GROUPS
          valueFrom:
            configMapKeyRef:
              key: QE_HEADER_GROUPS
              name: queryexplorer-config
        - name: QE_HEADER_NAME
          valueFrom:
            configMapKeyRef:
              key: QE_HEADER_NAME
              name: queryexplorer-config
        - name: QE_DB_DSN
          valueFrom:
            secretKeyRef:
              key: QE_DB_DSN
              name: queryexplorer-secrets
        - name: QE_DSN_ENCRYPTION_KEY
          valueFrom:
            secretKeyRef:
              key: QE_DSN_ENCRYPTION_KEY
              name: queryexplorer-secrets
        - name: QE_PROXY_SHARED_SECRET
          valueFrom:
            secretKeyRef:
              key: QE_PROXY_SHARED_SECRET
              name: queryexplorer-secrets
        image: queryexplorer:dev
        imagePullPolicy: IfNotPresent
        name: queryexplorer
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-17T07:11:17Z"
    lastUpdateTime: "2026-04-17T07:11:17Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-17T07:10:44Z"
    lastUpdateTime: "2026-04-17T07:27:27Z"
    message: ReplicaSet "queryexplorer-69f8fb6fdd" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 11
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
