deployment/k8s/61-queryexplorer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"queryexplorer","namespace":"quintus"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"queryexplorer"}}}
  creationTimestamp: "2026-04-17T06:18:46Z"
  name: queryexplorer
  namespace: quintus
  resourceVersion: "8263"
  uid: 6e989fb4-4658-4b36-a564-99a49c6d1c71
spec:
  clusterIP: 10.96.148.69
  clusterIPs:
  - 10.96.148.69
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: queryexplorer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
