deployment/k8s/current-ingressroute.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"app","namespace":"quintus"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"Host(`queryexplorer.local.test`) \u0026\u0026 PathPrefix(`/oauth2/`)","services":[{"name":"oauth2-proxy","port":4180}]},{"kind":"Rule","match":"Host(`queryexplorer.local.test`)","middlewares":[{"name":"oauth-errors","namespace":"quintus"},{"name":"oauth-auth","namespace":"quintus"},{"name":"inject-proxy- [...]
    creationTimestamp: "2026-04-17T09:27:45Z"
    generation: 4
    name: app
    namespace: quintus
    resourceVersion: "18885"
    uid: ba0d603e-21d0-465b-b340-15c639c34ed5
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: Host(`queryexplorer.local.test`) && PathPrefix(`/oauth2/`)
      services:
      - name: oauth2-proxy
        port: 4180
    - kind: Rule
      match: Host(`queryexplorer.local.test`)
      middlewares:
      - name: oauth-errors
        namespace: quintus
      - name: oauth-auth
        namespace: quintus
      - name: inject-proxy-secret
        namespace: quintus
      services:
      - name: queryexplorer
        port: 80
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"dex","namespace":"quintus"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"Host(`dex.local.test`)","services":[{"name":"dex","port":5556}]}]}}
    creationTimestamp: "2026-04-17T09:27:45Z"
    generation: 2
    name: dex
    namespace: quintus
    resourceVersion: "14319"
    uid: ae72c432-0588-424c-8154-fba6cf0ac938
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: Host(`dex.local.test`)
      services:
      - name: dex
        port: 5556
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"whoami","namespace":"quintus"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"Host(`queryexplorer.local.test`)","middlewares":[{"name":"oauth-auth","namespace":"quintus"}],"services":[{"name":"whoami","port":80}]}]}}
    creationTimestamp: "2026-04-17T09:29:40Z"
    generation: 4
    name: whoami
    namespace: quintus
    resourceVersion: "11890"
    uid: 01d49bac-f2c6-4fee-bfa0-d12b890850f9
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: Host(`whoami.local.test`)
      middlewares:
      - name: oauth-errors
        namespace: quintus
      - name: oauth-auth
        namespace: quintus
      services:
      - name: whoami
        port: 80
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"whoami-oauth","namespace":"quintus"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"Host(`whoami.local.test`) \u0026\u0026 PathPrefix(`/oauth2/`)","services":[{"name":"oauth2-proxy","port":4180}]}]}}
    creationTimestamp: "2026-04-17T09:33:19Z"
    generation: 1
    name: whoami-oauth
    namespace: quintus
    resourceVersion: "11727"
    uid: e7fb193a-6be1-40c4-ad13-14b5c14d445b
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: Host(`whoami.local.test`) && PathPrefix(`/oauth2/`)
      services:
      - name: oauth2-proxy
        port: 4180
kind: List
metadata:
  resourceVersion: ""
